--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,8 @@ $fontSize: rem(16); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #aaa; // Цвет шрифта по умолчанию
-$hoverColor: #DCCA87;
+$mainYellow: #DCCA87;
+$mainWhite: #fff;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
@@ -71,6 +72,8 @@ body {
 	// Прижимаем footer
 	> main {
 		flex: 1 1 auto;
+		position: relative;
+		z-index: 5;
 	}
 	// Фикс для слайдеров
 	> * {
