--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,45 @@
 // Заголовки, общие БЄМ блоки и проче...
+
+.main-bg {
+    position: fixed;
+    top: -10%;
+    left: 0;
+    width: 100%;
+    height: 120%;
+    background: url('@img/main-bg.jpg') center / cover no-repeat;
+}
+
+
+
+
+.block-header {
+    display: grid;
+    justify-items: center;
+    gap: 8px;
+    text-transform: capitalize;
+    // .block-header__sub-title
+    &__sub-title {
+        font-weight: 700;
+        @include adaptiveValue("font-size", 23, 23);
+        line-height: 130%;
+        letter-spacing: 0.04em;
+        color: $mainWhite;
+        display: grid;
+        gap: 8px;
+        justify-items: center;
+        &::after{
+        	content: "\e904";
+            @extend %ic;  
+            color: $mainYellow;
+            font-size: em(9,23);
+        }
+    }
+    // .block-header__title
+    &__title {
+        @include adaptiveValue("font-size", 64,64 );
+        font-weight: 600;
+        line-height: 130%;
+        letter-spacing: 0.04em;
+        color: $mainYellow;
+    }
+}
