--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,8 @@
 //====================================================================================================
 
 //====================================================================================================
+
+.footer {
+    z-index: 5;
+    position: relative;
+}
