--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,6 +2,7 @@
 	color: #fff;
 	padding: 10px 0;
 	@include adaptiveValue("min-height", 121, 70);
+	display: flex;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -16,6 +17,8 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		align-self: stretch;
+		flex: 1 1 auto;
 		gap: 10px;
 
 		@media (max-width:$mobile) {
