--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@ $fontSize: rem(16); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #aaa; // Цвет шрифта по умолчанию
+$mainBlack: #0C0B08;
 $mainYellow: #DCCA87;
 $mainWhite: #fff;
 
@@ -53,7 +54,7 @@ $responsiveType: 1;
 @import "base/null";
 
 body {
-	background: #0C0B08;
+	background: $mainBlack;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
