--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,7 +8,15 @@
 	left: 0;
 	width: 100%;
 	z-index: 50;
-
+	transition: transform 0.3s ease 0s;
+	&._header-scroll {
+		background: rgba(20, 20, 20, 0.8);
+		position: fixed;
+		transform: translate(0px,-100%);
+	}
+	&._header-show {
+		transform: translate(0px,0px);
+	}
 	// .header__container
 	&__container {
 
@@ -91,6 +99,7 @@
 			position: fixed;
 			width: 100%;
 			height: 100%;
+			min-height: 100vh;
 			top: 0;
 			left: -100%;
 			background: #1c1c1c;
@@ -99,7 +108,6 @@
 			padding-bottom: 30px;
 			padding-right: 15px;
 			padding-left: 15px;
-
 			&::before {
 				content: '';
 				position: fixed;
