Some blocks have been completed

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -16,6 +16,7 @@
 
 // Стили блока "показать еще"
 // @import "base/showmore";
+@import "libs/datepicker";
 
 // Стили для полноэкранного блока
 @import "base/fullscreen";
