--- a/src/scss/base/forms/input.scss
+++ b/src/scss/base/forms/input.scss
@@ -23,3 +23,21 @@ textarea.input {
 	resize: none;
 	padding: 0px 0px;
 }
+
+
+.input-dark {
+	height: 60px;
+	padding: 0 16px;
+	@extend %cuf;
+	background: $mainBlack;
+	border: 1px solid #F5EFDB;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 175%;
+	letter-spacing: 0.04em;
+	text-transform: capitalize;
+	color: $mainColor;
+	&._form-error {
+		border: 1px solid rgb(254, 13, 13);
+	}
+}
