--- a/src/scss/base/mixins.scss
+++ b/src/scss/base/mixins.scss
@@ -39,22 +39,10 @@
 	grid-template-columns: repeat(auto-#{$type}, minmax($min, $max));
 }
 
-// Адаптивное свойство (clamp)
 @mixin adaptiveValue($property, $startSize, $minSize, $widthFrom: $containerWidth, $widthTo: $minWidth, $keepSize: 0) {
-	@if ($startSize==0) {
-		$startSize: 0.0001;
-	}
-	@if ($minSize==0) {
-		$minSize: 0.0001;
-	}
-
-	// Для calc();
-	$addSize: math.div($startSize - $minSize, 16);
-
 	@if ($widthFrom == $containerWidth and $maxWidthContainer == 0) {
 		$widthFrom: $maxWidth;
 	}
-
 	// Брейк-поинты в EM
 	$widthFromMedia: em($widthFrom);
 	$widthToMedia: em($widthTo);
@@ -65,31 +53,19 @@
 	$yIntersection: -$widthTo * $slope + $minSize;
 	$flyValue: #{rem($yIntersection)}" + " #{$slope * 100}vw;
 
-	// Получение значения свойства
 	$propertyValue: #{"clamp(" rem($minSize) "," $flyValue "," rem($startSize) ")"};
-	// Если отрицательные значения
-	@if ($minSize > $startSize) {
-		$propertyValue: #{"clamp(" rem($startSize) "," $flyValue "," rem($minSize) ")"};
-	}
 
-	// Если поддерживается clamp();
-	@supports (#{$property}: $propertyValue) {
-		#{$property}: $propertyValue;
-	}
-	// Если не поддерживается clamp();
-	@supports not (#{$property}: $propertyValue) {
-		#{$property}: calc(#{rem($minSize)} + #{$addSize} * (100vw - #{rem($widthTo)}) / #{math.div($widthFrom, 16) - math.div($widthTo, 16)});
-	}
-
-	// Устанавливаем значения по умолчанию
-	@if $widthFrom != $containerWidth and $widthFrom != $maxWidth and $keepSize != 1 and $keepSize != 2 {
+	@if $widthFrom == $containerWidth or $widthFrom == $maxWidth or $keepSize == 1 or $keepSize == 2 {
 		@media (min-width: $widthFromMedia) {
-			#{$property}: inherit;
+			#{$property}: rem($startSize);
 		}
 	}
-	@if $widthTo != $minWidth and $keepSize != 1 and $keepSize != 3 {
+	@media (min-width: $widthToMedia) and (max-width: $widthFromMedia) {
+		#{$property}: $propertyValue;
+	}
+	@if $widthTo == $minWidth or $keepSize == 1 or $keepSize == 3 {
 		@media (max-width: $widthToMedia) {
-			#{$property}: inherit;
+			#{$property}: rem($minSize);
 		}
 	}
 }
