--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -8,12 +8,34 @@
     overflow: hidden;
 }
 
+[data-decor] {
+    position: relative;
+    &::before{
+        content:'';
+        position: absolute;
+        width: rem(145);
+        height: rem(145);
+        background: url('@img/main-decor.svg') 0 0 no-repeat;
+        animation: rotate 20s infinite linear;
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 .bg-item {
     position: absolute;
-    top: -10%;
+    top: -30%;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: 160%;
     background: url('@img/main-bg.jpg') center / cover no-repeat;
 }
 
@@ -43,7 +65,7 @@
     }
     // .block-header__title
     &__title {
-        @include adaptiveValue("font-size", 64,64 );
+        @include adaptiveValue("font-size", 64,40,500,320,1 );
         font-weight: 600;
         line-height: 130%;
         letter-spacing: 0.04em;
@@ -52,8 +74,7 @@
     // .block-header_big
     &_big {
         .block-header__title {
-            @include adaptiveValue("font-size", 90,70, 1100, 992, 1 );
-            // @include adaptiveValue("font-size", 90,50, 1100, $minWidth, 1 );
+            @include adaptiveValue("font-size", 90,70, 1100, 992, 1);
         }
     }
     // .block-header_left
@@ -65,3 +86,40 @@
     }
 }
 
+
+.square-decor {
+    position: relative;
+    &:not([class*=-ibg]) {
+        img {
+            position: relative;
+        }
+    
+    }
+    &::before,
+    &::after {
+        content: '';
+        width: percent(435, 619);
+        height: percent(435, 688);
+        position: absolute;
+        background: $mainYellow;
+    }
+
+    &::before {
+        left: 0;
+        bottom: 0;
+        transform: translate(-25px, 25px);
+
+    }
+
+    &::after {
+        right: 0;
+        top: 0;
+        transform: translate(25px, -25px);
+
+    }
+
+    img {
+        z-index: 2;
+        
+    }
+}
